Fixed bug #38194 (ReflectionClass::isSubclassOf() returns TRUE for the class itself).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_2@217040 c90b9560-bf6c-de11-be94-00142212c4b1